fix: resolve Storybook component preview height wrapping issue
- Fix 100vh/100vw height/width forcing in story previews
- Update global Storybook decorator to use minimal wrapper (width: '100%')
- Change PolarisExampleWrapper and SandboxContainer from fixed height to min-height
- Components now wrap to natural content height instead of full viewport
- Follows standard Storybook best practices for component rendering

--- a/polaris/polaris.shopify.com/src/components/PolarisExampleWrapper/PolarisExampleWrapper.module.scss
+++ b/polaris/polaris.shopify.com/src/components/PolarisExampleWrapper/PolarisExampleWrapper.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  min-height: 100px;
   padding-left: 32px;
   padding-right: 32px;
   background-color: var(--p-color-bg);
