--- a/polaris/polaris.shopify.com/src/components/SandboxContainer/SandboxContainer.module.scss
+++ b/polaris/polaris.shopify.com/src/components/SandboxContainer/SandboxContainer.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  min-height: 100px;
   margin: 0;
   padding: 0;
 }
